fixed readability with red colors

--- a/style.css
+++ b/style.css
@@ -133,9 +133,14 @@ select {
     border-left: 2px solid rgba(0, 0, 0, 0.3);
     padding: 0.5rem;
     font-size: 1rem;
-    color: #b9b9b98e;
+    color: #e2e2e2;
     outline: none;
     transition: border-color 0.3s ease;
+}
+
+option {
+    background: rgba(0, 0, 0, 0.7);
+    color: #e2e2e2;
 }
 
 /* Submit Button */
